<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:layout_margin="10dp"
        android:text="@string/motto"
        style="@style/TextAppearance.AppCompat.Headline"
        android:textColor="#000000"
        android:gravity="center">
    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="10dp"
                android:textColor="@color/colorAccent"
                style="@style/TextAppearance.AppCompat.Caption"
                android:id="@+id/signin_missing_username_hint"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_name_prompt"
                style="@style/TextAppearance.AppCompat.Headline"
                />
            <EditText
                android:maxLines="1"
                android:layout_width="match_parent"
                android:id="@+id/signin_make_username"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="10dp"
                android:textColor="@color/colorAccent"
                style="@style/TextAppearance.AppCompat.Caption"
                android:id="@+id/signin_missing_password_hint"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password_prompt"
                style="@style/TextAppearance.AppCompat.Headline"
                />
            <EditText
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signin_make_password"
                android:inputType="textPassword"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/signin_next"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:layout_margin="10dp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="@string/next"
        android:background="@drawable/border"/>
</LinearLayout>