<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:layout_margin="10dp"
        android:text="@string/choose_nonprofits_prompt"
        style="@style/TextAppearance.AppCompat.Headline"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:orientation="vertical"
        android:layout_margin="10dp">
        android:layout_margin="10dp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="35dp"
            android:text="@string/plus"
            android:id="@+id/startnonprofit1"
            android:background="@drawable/border"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="35dp"
            android:id="@+id/startnonprofit2"
            android:text="@string/plus"
            android:background="@drawable/border"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="35dp"
            android:text="@string/plus"
            android:id="@+id/startnonprofit3"
            android:background="@drawable/border"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="35dp"
            android:text="@string/plus"
            android:id="@+id/startnonprofit4"
            android:background="@drawable/border"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="35dp"
            android:text="@string/plus"
            android:id="@+id/startnonprofit5"
            android:background="@drawable/border"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:text="@string/next"
        android:layout_margin="10dp"
        android:id="@+id/start_nonprofit_next"
        android:background="@drawable/border">
    </Button>
</LinearLayout>