<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:text="@string/connect_card_title"
            style="@style/TextAppearance.AppCompat.Headline"
            android:gravity="center">
        </TextView>
        <LinearLayout
            android:id="@+id/card_icon_row"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/mastercard"
                android:id="@+id/mastercard_image"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/discover"
                android:id="@+id/discover_image"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/amex"
                android:id="@+id/amex_image"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/visa"
                android:id="@+id/visa_image"/>
        </LinearLayout>
    </LinearLayout>
    <!--TODO: duplicate first fill layout and add ids-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/card_firstname_hint"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/colorAccent"
                    android:layout_marginLeft="10dp"
                    />
            </LinearLayout>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/card_firstname"
                android:maxLines="1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/card_lastname_hint"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/colorAccent"
                    android:layout_marginLeft="10dp"
                    />
            </LinearLayout>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/card_lastname"
                android:maxLines="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_num"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/colorAccent"
                    android:id="@+id/card_number_hint"
                    android:layout_marginLeft="10dp"
                    />
            </LinearLayout>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/card_number"
                android:maxLines="1"/>
            </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exp_date"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/card_exp_hint"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/colorAccent"
                    android:layout_marginLeft="10dp"
                    />
            </LinearLayout>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/card_exp_date"
                android:inputType="date"
                android:maxLines="1"/>
        </LinearLayout>
        <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cvv"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/card_cvv_hint"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/colorAccent"
                    android:layout_marginLeft="10dp"
                    />
            </LinearLayout>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/card_cvv"
                    android:maxLines="1"
                    android:inputType="number"
                    android:maxLength="3"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="0.1"
        android:layout_margin="10dp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="@string/next"
        android:id="@+id/card_next"
        android:background="@drawable/border"/>
</LinearLayout>